--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,13 @@
+ion-item {
+  background-color: #fff;
+  width: 95%;
+  margin: 15px auto;
+  font-weight: bold;
+  border-radius: 20px;
+  --border-radius: 20px;
+}
+
+ion-content {
+  background-color: var(--ion-color-light);
+}
 
