--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
 <ion-app>
+  <ion-menu type="overlay" contentId="menu" menuId="mainMenu" side="start">
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content id="menu">
+          <ion-list>
+            <ion-menu-toggle autoHide=true>
+              <ion-item tappable href="/preferences" routerDirection="forward">Preferences
+                <ion-icon slot="start" name="settings"></ion-icon>
+              </ion-item>
+            </ion-menu-toggle>
+          </ion-list>
+        </ion-content>  
+    </ion-menu>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
