--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,25 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>
-      Notes
-    </ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="addNote()">
-        <ion-icon slot="icon-only" name="clipboard"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>
+        Notes
+      </ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="addNote()">
+          <ion-icon slot="icon-only" name="clipboard"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-buttons slot="start">
+          <ion-button (click)="showMenu()">
+            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+  </ion-header>
  
 <ion-content color="white">
  
   <ion-list>
-    <ion-item button detail *ngFor="let note of notesService.notes" [href]="'/notes/' + note.id" routerDirection="forward">
+    <ion-item button detail *ngFor="let note of notes" [href]="'/notes/' + note._id" routerDirection="forward">
       <ion-label>{{ note.title }}</ion-label>
     </ion-item>
   </ion-list>
