--- a/src/app/detail/detail.page.scss
+++ b/src/app/detail/detail.page.scss
@@ -8,3 +8,30 @@ ion-textarea {
 md-to-html > blockquote {
   background-color: #888888;
 }
+
+ion-content {
+  --background: #ffffff;
+  font-family: IBM Plex Sans;
+}
+
+blockquote > pre > code {
+  background-color: #eeeeee;
+  padding-left: 10px;
+  border-left-width: thick;
+  border-left-color: aqua;
+  border-left-style: inset;
+}
+
+pre > code {
+  background-color: #eeeeee;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+}
+
+p {
+  background-color: #eeeeee;
+  font-style: oblique;
+}
